refactor: 테이블 그룹 생성 로직 일부 도메인으로 변경